# hisia

./: .gitignore  .travis.yml  LICENSE  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  tox.ini
.dvc/: config
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml  run_tests.yml  run_testsyml
data/: data_custom.json  steffan267_SAM.json
docs/: Makefile  conf.py  index.rst  make.bat
hisia/: __init__.py  hisia.py
hisia/data/test/: .gitignore
hisia/data/train/: .gitignore
hisia/metrics/: classification_report.json  performance.py  train_data_report.json
hisia/models/: .gitignore  base_model.pkl.dvc  generate_data.py  helpers.py  lazylogger.py  model_evaluation.py  model_reports.py  model_train.py  train_model.py
hisia/models/data/: stops.pkl
hisia/reports/: visualization.py
notebooks/: afinn_hisia_comparison.ipynb  helpers.py  model_training.ipynb
src/data/: data_custom.json
src/models/: helpers.py  hisia.py  train_model.py
tests/: __init__.py  conftest.py  test_basemodel_results.py  test_data.py  test_scikit_version.py  test_tokenizer.py
