[tool.poetry]
name = "hisia"
version = "0.1.3"
description = "A Danish sentiment analysis using scikit-learn"
authors = [
    "Prayson W. Daniel <praysonwilfred@gmail.com>"
]
license = "MIT"
repository = "https://github.com/Proteusiq/hisia"
readme = "README.md"

keywords = ["nlp", "machine_learning","danish","sentiment"]


[tool.poetry.dependencies]
python = "^3.6.1"
scikit-learn = "0.23.1"
pandas = "^1.0.3"
lemmy = "^2.1.0"
dill = "0.3.1.1"
matplotlib = "^3.2.1"
loguru = "^0.5.0"



[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
python-dotenv = ">=0.5.1"
pytest = "^5.4.2"
pytest-cov = "^2.9.0"
tox = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
