[tool.poetry]
name = "hisia"
version = "0.3.2"
description = "A Danish sentiment analysis using scikit-learn"
authors = [
    "Prayson W. Daniel <praysonwilfred@gmail.com>"
]
license = "MIT"
repository = "https://github.com/Proteusiq/hisia"
readme = "README.md"

keywords = ["nlp", "machine_learning","danish","sentiment"]


[tool.poetry.dependencies]
python = "^3.8.11"
scikit-learn = "1.0.2"
pandas = "^1.0.3"
lemmy = "^2.1.0"
dill = "0.3.4"
matplotlib = "^3.2.1"
loguru = "^0.5.0"




[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pytest = "^5.4.2"
black = "^21.9b0"
watermark = "^2.3.0"
ipykernel = "^6.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
